tests/local/missing-features/shared-everything-threads-types.wast
(assert_invalid
  (module
    (type (shared (func)))
  )
  "shared composite types require the shared-everything-threads proposal")
